--- a/app/views/updateWine.scala.html
+++ b/app/views/updateWine.scala.html
@@ -45,13 +45,13 @@
                     <td> Сорт винограда: </td> <td>@helper.inputText(form("grapeSort"),'_showConstraints ->false)</td>
                 </tr>
                 <tr>
-                    <td> Цена: </td> <td> @helper.inputText(form("price"),'_showConstraints ->false,'type -> "number")</td>
+                    <td> Цена: </td> <td> @helper.inputText(form("price"),'_showConstraints ->false,'required -> "required",'type -> "number")</td>
                 </tr>
                 <tr>
-                    <td> Объем: </td> <td>  @helper.inputText(form("value"),'_showConstraints ->false,'type -> "number")</td>
+                    <td> Объем: </td> <td>  @helper.inputText(form("value"),'_showConstraints ->false,'required -> "required", 'type -> "number")</td>
                 </tr>
                 <tr>
-                    <td> Крепость: </td> <td>  @helper.inputText(form("degree"),'_showConstraints ->false,'type -> "number")</td>
+                    <td> Крепость: </td> <td>  @helper.inputText(form("degree"),'_showConstraints ->false,'required -> "required", 'type -> "number")</td>
                 </tr>
 
                 <tr>
