--- a/app/views/catalogPage.scala.html
+++ b/app/views/catalogPage.scala.html
@@ -132,9 +132,9 @@
                     @helper.inputText(wineForm("shelfLife"), '_showConstraints -> false, 'placeholder -> "Срок годности")
                     @helper.inputText(wineForm("sugar"), '_showConstraints -> false, 'placeholder -> "Сахар")
                     @helper.inputText(wineForm("grapeSort"), '_showConstraints -> false, 'placeholder -> "Сорт винограда")
-                    @helper.inputText(wineForm("price"), '_showConstraints -> false, 'placeholder -> "Цена",'type -> "number")
-                    @helper.inputText(wineForm("value"), '_showConstraints -> false, 'placeholder -> "Объем",'type -> "number")
-                    @helper.inputText(wineForm("degree"), '_showConstraints -> false, 'placeholder -> "Крепость",'type -> "number")
+                    @helper.inputText(wineForm("price"), '_showConstraints -> false, 'placeholder -> "Цена",'type -> "number", 'step->"0.001",'min->"0")
+                    @helper.inputText(wineForm("value"), '_showConstraints -> false, 'placeholder -> "Объем",'type -> "number", 'step->"0.001",'min->"0")
+                    @helper.inputText(wineForm("degree"), '_showConstraints -> false, 'placeholder -> "Крепость",'type -> "number", 'step->"0.001",'min->"0")
 
 
                     <div class="modal-footer">
@@ -190,13 +190,13 @@
                                 Сорт винограда: </td> <td>@helper.inputText(form("grapeSort"), '_showConstraints -> false)</td>
                         </tr>
                         <tr>
-                            <td> Цена: </td> <td> @helper.inputText(form("price"), '_showConstraints -> false,'required -> "required", 'type ->"number")</td>
+                            <td> Цена: </td> <td> @helper.inputText(form("price"), '_showConstraints -> false,'required -> "required", 'type ->"number", 'step->"0.001",'min->"0")</td>
                         </tr>
                         <tr>
-                            <td> Объем: </td> <td>  @helper.inputText(form("value"), '_showConstraints -> false,'required -> "required", 'type ->"number")</td>
+                            <td> Объем: </td> <td>  @helper.inputText(form("value"), '_showConstraints -> false,'required -> "required", 'type ->"number", 'step->"0.001",'min->"0")</td>
                         </tr>
                         <tr>
-                            <td> Крепость: </td> <td>  @helper.inputText(form("degree"), '_showConstraints -> false,'required -> "required", 'type ->"number")</td>
+                            <td> Крепость: </td> <td>  @helper.inputText(form("degree"), '_showConstraints -> false,'required -> "required", 'type ->"number", 'step->"0.001",'min->"0")</td>
                         </tr>
                     </table>
 
@@ -314,7 +314,7 @@
                                     <li>
                                         <div class="product">
                                             <a href="#" class="product-img">
-                                                <img src=@item.getLinkForProduct(item.getIdProduct) alt="" height="800" ></a>
+                                                <img src=@item.getLinkForProduct(item.getIdProduct) alt="" height="400" ></a>
                                             <p class="wineName">@item.getName</p>
                                             <p > @colomn(2):@item.getColour</p>
                                             <p > @colomn(3):@item.getCountry</p>
