--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -3,13 +3,18 @@ html,body,div,span,applet,object,iframe,h1,h2,h3,h4,h5,h6,p,blockquote,pre,a,abb
 	margin: 0;
 	padding: 0;
 	border: 0;
+
 	font-size: 100%;
 	font: inherit;
 	vertical-align: baseline;
 }
+h1{
+	font-family: "Comic Sans MS";
+}
 
 body {
 	line-height: 1;
+	font-family: "Comic Sans MS";
 }
 
 
@@ -29,8 +34,8 @@ TH,TR{
 }
 
 body {
-	font-family: sans-serif;
-	background-color: #323B55;
+	font-family: "Comic Sans MS";
+	background-color: #d93639;
 }
 
 #slick-login {
@@ -103,7 +108,7 @@ body {
 	color: #fff;
 	font-size: 18px;
 	font-weight: bold;
-	text-shadow: 0px -1px 0px #5b6ddc;
+	text-shadow: 0px -1px 0px #da0505;
 	outline: none;
 	border: 1px solid rgba(0, 0, 0, .49);
 
@@ -112,15 +117,10 @@ body {
 	background-clip: padding-box;
 	border-radius: 6px;
 
-	background-color: #5466da;
-	background-image: -webkit-linear-gradient(bottom, #5466da 0%, #768ee4 100%);
-	background-image: -moz-linear-gradient(bottom, #5466da 0%, #768ee4 100%);
-	background-image: -o-linear-gradient(bottom, #5466da 0%, #768ee4 100%);
-	background-image: -ms-linear-gradient(bottom, #5466da 0%, #768ee4 100%);
-	background-image: linear-gradient(bottom, #5466da 0%, #768ee4 100%);
+	background-image: -webkit-linear-gradient(bottom, rgba(0, 0, 0, 0.97) 0%, #e4473d 100%);
 	
-	-webkit-box-shadow: inset 0px 1px 0px #9ab1ec;
-	box-shadow: inset 0px 1px 0px #9ab1ec;
+	-webkit-box-shadow: inset 0px 1px 0px black;
+	box-shadow: inset 0px 1px 0px black;
 	
 	cursor: pointer;
 
