--- a/app/views/basketPage.scala.html
+++ b/app/views/basketPage.scala.html
@@ -3,18 +3,18 @@
 <html lang="en">
     <head>
         <meta charset="UTF-8">
-        <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
+
         <link rel="shortcut icon" type="image/png" href="@routes.Assets.versioned("images/logo.jpg")">
         <title>Корзина</title>
 
         <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
+        <       <link rel="stylesheet" media="screen" href="@routes.Assets.versioned("stylesheets/main.css")">
         <link href="//netdna.bootstrapcdn.com/bootstrap/3.0.0/css/bootstrap-glyphicons.css" rel="stylesheet">
-
+        <link rel="shortcut icon" type="image/png" href="@routes.Assets.versioned("images/logo.jpg")">
         <link rel="stylesheet" media="screen" href="@routes.Assets.versioned("stylesheets/fontXml.css")">
         <link rel="stylesheet" media="screen" href="@routes.Assets.versioned("stylesheets/startPage.css")">
-        <link rel="stylesheet" media="screen" href="@routes.Assets.versioned("stylesheets/Search.css")">
         <link rel="stylesheet" type="text/css" href='@routes.Assets.versioned("stylesheets/bootstrap.min.css")'>
-        @*<script src="@routes.Assets.versioned("javascripts/window.js")" type="text/javascript"></script>*@
+
         <script src="@routes.Assets.versioned("javascripts/jquery-2.2.0.min.js")" type="text/javascript"></script>
         <script src="@routes.Assets.versioned("javascripts/bootstrap.min.js")" type="text/javascript"></script>
     </head>
@@ -120,35 +120,40 @@
             </li>
 
         </ul>
-        <ul id="nav">
+        <ul id="nav" >
+
 
             <li><a>@helper.form(action = routes.ContactController.contactPage) {
-                <input type="submit" value="Контакты">
+                <input type="submit" value="Контакты" class="button_menu">
+                }</a>
+            </li>
+            <li><a>@helper.form(action = routes.SaleController.showSales) {
+                <input type="submit" value="Акции" class="button_menu">
                 }</a>
             </li>
             <li><a>@helper.form(action = routes.WineController.catalogPage) {
-                <input type="submit" value="Каталог">
+                <input type="submit" value="Каталог" class="button_menu">
                 }</a>
             </li>
-            <li><a> @helper.form(action = routes.AuxiliaryController.projectPage2) {
-                <input type="submit" value="О проекте ">
-                }
-            </a>
-            </li>
+            <li><a>@helper.form(action = routes.AuxiliaryController.projectPage2) {
+
+                <input type="submit" value="О проекте" class="button_menu">
+                }</a></li>
+
             <li><a>@helper.form(action = routes.BasketController.basketPage) {
                 <input type="hidden" name="numberSql" value="0">
-                <input type="submit" value="Корзина">
+                <input type="submit" value="Корзина" class="button_menu">
                 }</a></li>
 
             <li><a>@helper.form(action = routes.BasketController.basketPage) {
                 <input type="hidden" name="numberSql" value="1">
-                <input type="submit" value="Избранное">
+                <input type="submit" value="Избранное"  class="button_menu">
                 }</a></li>
             @if(isAdmin) {
-                @*<li><a href="@routes.WineController.renderAddWine(login)">Добавить товар </a></li>*@
-                <li><a href="#win3" class="button button-green">Добавить товар</a></li>
                 <li><a href="@routes.UsersController.usersList()">Список пользователей </a></li>
             }
+
+
         </ul>
         <p></p>
         <p></p>
@@ -188,61 +193,166 @@
             val cod = "wine"
             cod(i)
         }
-        <table class="wine">
-            <tr>
-                <td>
-                @if(sizeItems() != 0) {
-                    @if(error!=3) {
-                        <th>
-                            <button onclick="window.location.href = '@routes.BasketController.buyProducts()'"
-                            type="submit"> Купить
+        <table class="favorite">
+            <td>
+                    @if(sizeItems() != 0) {
+                        @if(error!=3) {
+                            <td>
+                                <button onclick="window.location.href = '@routes.BasketController.buyProducts()'"
+                                type="submit" style="color: white"> Купить
 
-                            </button>
-                        </th>
-                    }
-                    <table class="wine1">
-                        <tr>
-                        @for(j <- 1 to sizeItems) {
-                            <th>@colomn(j - 1)</th>
-                        }
-                        </tr>
-                        <tr colspan="2"> @win.map { item =>
-                            <th>@item.getIdProduct</th>
-                            <th>@item.getName</th>
-                            <th>@item.getColour</th>
-                            <th>@item.getCountry</th>
-                            <th>@item.getBrand</th>
-                            <th>@item.getShelfLife</th>
-                            <th>@item.getSugar</th>
-                            <th>@item.getGrapeSort</th>
-                            <th>@item.getPrice</th>
-                            <th>@item.getValue</th>
-                            <th>@item.getDegree</th>
-
-                            <th>
-                                <button onclick="window.location.href = '@routes.BasketController.deleteFromBasket(item.getIdProduct)'"
-                                type="submit" class="btn btn-default btn-sm">
-                                    <span class="glyphicon glyphicon-trash"></span>
                                 </button>
-                            </th>
-
-
-                        @if(isAdmin) {
-                            <th>
-                                @*<li><a href="#win4" class="button button-green">Изменить</a></li>*@
-
-                            </th>
+                            </td>
                         }
-                        <tr></tr>
-                        }
+                        <div id="main"><!— Основной раздел содержимого —>
 
-                    </table>
-                </td>
-            </tr>
+                            <section id="content"><!— Основной подраздел содержимого —>
+                                <div id="left">
+
+
+                                    <div id="favorite">
+
+                                        <ul>
+                                        @win.map { item =>
+                                            @item.setAvgRating(item.averageRatingOfTheProduct(item.getIdProduct))
+                                        <li>
+                                            <div class="product">
+                                                <a href="#" class="product-img">
+                                                    <img src=@item.getLinkForProduct(item.getIdProduct) alt="" height="400" ></a>
+                                                <p class="wineName">@item.getName</p>
+
+
+                                                <div class="product-text">
+                                                    <p > @colomn(2): @item.getColour</p>
+                                                    <p > @colomn(3): @item.getCountry</p>
+                                                    <p > @colomn(4): @item.getBrand</p>
+                                                    <p > @colomn(5): @item.getShelfLife</p>
+                                                    <p > @colomn(6): @item.getSugar</p>
+                                                    <p > @colomn(7): @item.getGrapeSort</p>
+                                                    <p > @colomn(9): @item.getValue л.</p>
+                                                    <p > @colomn(10): @item.getDegree %</p>
+
+
+
+
+
+                                                </div>
+
+                                                <p class="product-price"><b>@item.getPrice руб.</b></p>
+                                                <p class="product-price1">@item.averageRatingOfTheProduct(item.getIdProduct)/5</p>
+                                                <div class="product-Rating">
+                                                    <div class="Rating">
+                                                        <div style="display: inline-flex;margin: 0 auto;width: 500px;">
+                                                            @if(!login.isEmpty) {
+                                                                @*сюда добавить проверку - голосовал ли пользователь за вино*@
+                                                                @if(item.isVote(item.getIdProduct,login ) != login){
+                                                                    Ваша оценка @item.getUsersMark(item.getIdProduct,login).
+
+                                                                }
+                                                                @if(item.isVote(item.getIdProduct,login )==login){
+                                                                    @helper.form(action = routes.RatingController.newRating) {
+                                                                        <input type="hidden" name="getIdProduct" value="@item.getIdProduct">
+                                                                        <input type="hidden" name="Rating" value="1">
+
+                                                                        <input type="submit" class="btn btn-danger" value="1" />
+                                                                    }
+                                                                    @helper.form(action = routes.RatingController.newRating) {
+                                                                        <input type="hidden" name="getIdProduct" value="@item.getIdProduct">
+                                                                        <input type="hidden" name="Rating" value="2">
+
+                                                                        <input type="submit" class="btn btn-danger" value="2" />
+                                                                    }
+                                                                    @helper.form(action = routes.RatingController.newRating) {
+                                                                        <input type="hidden" name="getIdProduct" value="@item.getIdProduct">
+                                                                        <input type="hidden" name="Rating" value="3">
+
+                                                                        <input type="submit" class="btn btn-danger" value="3" />
+                                                                    }
+                                                                    @helper.form(action = routes.RatingController.newRating) {
+                                                                        <input type="hidden" name="getIdProduct" value="@item.getIdProduct">
+                                                                        <input type="hidden" name="Rating" value="4">
+
+                                                                        <input type="submit" class="btn btn-danger" value="4" />
+                                                                    }
+                                                                    @helper.form(action = routes.RatingController.newRating) {
+                                                                        <input type="hidden" name="getIdProduct" value="@item.getIdProduct">
+                                                                        <input type="hidden" name="Rating" value="5">
+
+                                                                        <input type="submit" class="btn btn-danger" value="5" />
+
+                                                                    }
+
+
+
+                                                                }
+
+                                                            }
+                                                            @if(login.isEmpty) {
+                                                                <input type="submit" class="btn btn-danger" value="1" disabled />
+                                                                <input type="submit" class="btn btn-danger" value="2" disabled/>
+                                                                <input type="submit" class="btn btn-danger" value="3" disabled/>
+                                                                <input type="submit" class="btn btn-danger" value="4" disabled/>
+                                                                <input type="submit" class="btn btn-danger" value="5" disabled/>
+                                                            }
+
+                                                        </div>
+                                                    </div>
+                                                </div>
+
+
+
+
+                                                <div class="product-buttons-basket">
+
+                                                    <div class="layer1-button">
+                                                    @if(item.isAddingToFavorite(item.getIdProduct,login)==login) {
+                                                        @helper.form(action = routes.BasketController.addInFavorite(item.getIdProduct)) {
+                                                            <button type="submit" class="btn btn-default btn-sm" style="width: 50px;
+                                                                height: 50px">
+                                                                <span class="glyphicon glyphicon-heart" ></span>
+                                                            </button>
+                                                        }
+                                                    }
+                                                    </div>
+
+                                                    <div class="layer2-button">
+                                                    @helper.form(action = routes.BasketController.deleteFromBasket(item.getIdProduct)) {
+                                                        <button type="submit" class="btn btn-default btn-sm" style="width: 50px;
+                                                            height: 50px; ">
+                                                            <span class="glyphicon glyphicon-trash"></span>
+                                                        </button>
+                                                    }
+                                                    </div>
+                                                    <br>
+
+                                                    @if(item.isAddingToFavorite(item.getIdProduct,login)!=login){
+                                                        <p text-align="left" style="color: blue">Добавлен в избранное.</p>
+                                                    }
+
+                                                 </div>
+                                            </div>
+                                        </li>
+                                        }
+
+                                        </ul>
+                                    </div>
+                                </div>
+                            </section>
+                        </div>
+
+
+
+
+
+
+
+
+
+            </td>
         </table>
         }
         @if(sizeItems() == 0) {
-            Корзина пустая !
+            <h1>Корзина пустая !</h1>
         }
     </div>
     </body>
