--- a/app/views/contactPage.scala.html
+++ b/app/views/contactPage.scala.html
@@ -2,10 +2,17 @@
 <html>
 
     <head>
-        <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
+        <meta charset="UTF-8">
 
-        <link rel="stylesheet" media="screen" href="@routes.Assets.versioned("stylesheets/startPage.css")">
+        <link rel="shortcut icon" type="image/png" href="@routes.Assets.versioned("images/logo.jpg")">
+        <title>Корзина</title>
+
+        <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
+        <       <link rel="stylesheet" media="screen" href="@routes.Assets.versioned("stylesheets/main.css")">
+        <link href="//netdna.bootstrapcdn.com/bootstrap/3.0.0/css/bootstrap-glyphicons.css" rel="stylesheet">
+        <link rel="shortcut icon" type="image/png" href="@routes.Assets.versioned("images/logo.jpg")">
         <link rel="stylesheet" media="screen" href="@routes.Assets.versioned("stylesheets/fontXml.css")">
+        <link rel="stylesheet" media="screen" href="@routes.Assets.versioned("stylesheets/startPage.css")">
         <link rel="stylesheet" type="text/css" href='@routes.Assets.versioned("stylesheets/bootstrap.min.css")'>
 
         <script src="@routes.Assets.versioned("javascripts/jquery-2.2.0.min.js")" type="text/javascript"></script>
@@ -124,29 +131,34 @@
                 </li>
 
             </ul>
-            <ul id="nav">
+            <ul id="nav" >
 
 
                 <li><a>@helper.form(action = routes.ContactController.contactPage) {
-                    <input type="submit" value="Контакты">
+                    <input type="submit" value="Контакты" class="button_menu">
+                    }</a>
+                </li>
+                <li><a>@helper.form(action = routes.SaleController.showSales) {
+                    <input type="submit" value="Акции" class="button_menu">
                     }</a>
                 </li>
                 <li><a>@helper.form(action = routes.WineController.catalogPage) {
-                    <input type="submit" value="Каталог">
+                    <input type="submit" value="Каталог" class="button_menu">
                     }</a>
                 </li>
                 <li><a>@helper.form(action = routes.AuxiliaryController.projectPage2) {
 
-                    <input type="submit" value="О проекте">
+                    <input type="submit" value="О проекте" class="button_menu">
                     }</a></li>
+
                 <li><a>@helper.form(action = routes.BasketController.basketPage) {
                     <input type="hidden" name="numberSql" value="0">
-                    <input type="submit" value="Корзина">
+                    <input type="submit" value="Корзина" class="button_menu">
                     }</a></li>
 
                 <li><a>@helper.form(action = routes.BasketController.basketPage) {
                     <input type="hidden" name="numberSql" value="1">
-                    <input type="submit" value="Избранное">
+                    <input type="submit" value="Избранное"  class="button_menu">
                     }</a></li>
                 @if(isAdmin) {
                     <li><a href="@routes.UsersController.usersList()">Список пользователей </a></li>
@@ -154,55 +166,52 @@
 
 
             </ul>
-            <br>
-            <br>
+            <p></p>
+            <p></p>
             <p></p>
             <br>
             <br>
             <br>
+            <br>
 
-            <table class="wine">
+            <table class="favorite">
+                <td>
 
-            <div id="main"><!— Основной раздел содержимого —>
+                    <div id="main"><!— Основной раздел содержимого —>
 
-                <section id="content"><!— Основной подраздел содержимого —>
-                    @contacts.map { item =>
-                    @if(!isAdmin){
-                        <p>Номер телефона -  @item.getPhone</p>
-                        <p>E-mail - @item.getEmail</p>
-                        <p>Адрес - @item.getAdress</p>
-                        <p>Часы работы - @item.getWorkHours</p>
-                    }
-                    @if(isAdmin){
-
-
-                        @helper.form(action = routes.ContactController.changeContact(item.getIdContact)) {
-
-                            <p>Номер телефона - <textarea rows="1" cols="60" name="getPhone" style="color: black" >@item.getPhone</textarea></p>
-                            <p>E-mail - <textarea rows="1" cols="60" name="getEmail" style="color: black" >@item.getEmail</textarea></p>
-                            <p>Адрес - <textarea rows="1" cols="60" name="getAdress" style="color: black" >@item.getAdress</textarea></p>
-                            <p>Часы работы - <textarea rows="1" cols="60" name="getWorkHours" style="color: black" >@item.getWorkHours</textarea></p>
-
-                            <input type="submit" class="btn btn-danger" style="" value="Изменить" />
-                        }
-
-                    }
-                    }
-
-            @*<table class="wine">*@
-                @*<div class="card">*@
-                    @*<div class="card-body">*@
-                        @*<p>Номер телефона - 555-55-55</p>*@
-                        @*<p>E-mail - DonMins@@yandex.ru</p>*@
-                        @*<p>Адрес - г.Самара, ул. Любительская, д. 13, 1 этаж</p>*@
-                        @*<p>Часы работы - Пн.-Вс.: 9:00 - 21:00</p>*@
-                        @*<p>              Сб.-Вт.: 10:00 - 18:00</p>*@
-                    @*</div>*@
-                @*</div>*@
-                </section>
-            </div>
+                        <section id="content"><!— Основной подраздел содержимого —>
+                            @contacts.map { item =>
+                                @if(!isAdmin){
+                                    <div class = "contact-style">
+                                        <p>Номер телефона -  @item.getPhone</p>
+                                        <p>E-mail - @item.getEmail</p>
+                                        <p>Адрес - @item.getAdress</p>
+                                        <p>Часы работы - @item.getWorkHours</p>
+                                    </div>
+                                }
+                                @if(isAdmin){
 
 
+                                    @helper.form(action = routes.ContactController.changeContact(item.getIdContact)) {
+                                        <br>
+
+
+                                            <p >Tелефон - <textarea rows="1" cols="60" name="getPhone" style="color: black" >@item.getPhone</textarea></p>
+                                            <p>E-mail - <textarea rows="1" cols="60" name="getEmail" style="color: black" >@item.getEmail</textarea></p>
+                                            <p>Адрес - <textarea rows="1" cols="60" name="getAdress" style="color: black" >@item.getAdress</textarea></p>
+                                            <p>Часы работы - <textarea rows="1" cols="60" name="getWorkHours" style="color: black" >@item.getWorkHours</textarea></p>
+                                        </div>
+
+                                        <input type="submit" class="btn btn-danger" style="" value="Изменить" />
+                                    }
+
+                                }
+                            }
+
+
+                        </section>
+                    </div>
+                </td>
             </table>
         </div>
     </body>
