--- a/app/views/projectPage.scala.html
+++ b/app/views/projectPage.scala.html
@@ -5,6 +5,7 @@
     <head>
         <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
 
+        <link rel="stylesheet" media="screen" href="@routes.Assets.versioned("stylesheets/main.css")">
         <link rel="stylesheet" media="screen" href="@routes.Assets.versioned("stylesheets/startPage.css")">
         <link rel="stylesheet" type="text/css" href='@routes.Assets.versioned("stylesheets/bootstrap.min.css")'>
 
@@ -120,7 +121,7 @@
                         }
                         @if(!(login.isEmpty)) {
                             <li><a href="@routes.LoginController.logout()">Выход</a></li>
-                            <li><a href="@routes.RatingController.ratingUserPage()">Действия</a></li>
+                            <li><a href="@routes.RatingController.ratingUserPage()">История оценок</a></li>
                         }
 
                     </ul>
@@ -128,55 +129,65 @@
 
             </ul>
 
-            <ul id="nav">
+            <ul id="nav" >
+
 
                 <li><a>@helper.form(action = routes.ContactController.contactPage) {
-                    <input type="submit" value="Контакты">
+                    <input type="submit" value="Контакты" class="button_menu">
                     }</a>
                 </li>
-
+                <li><a>@helper.form(action = routes.SaleController.showSales) {
+                    <input type="submit" value="Акции" class="button_menu">
+                    }</a>
+                </li>
                 <li><a>@helper.form(action = routes.WineController.catalogPage) {
-                    <input type="submit" value="Каталог">
+                    <input type="submit" value="Каталог" class="button_menu">
                     }</a>
                 </li>
                 <li><a>@helper.form(action = routes.AuxiliaryController.projectPage2) {
 
-                    <input type="submit" value="О проекте">
+                    <input type="submit" value="О проекте" class="button_menu">
                     }</a></li>
+
                 <li><a>@helper.form(action = routes.BasketController.basketPage) {
                     <input type="hidden" name="numberSql" value="0">
-                    <input type="submit" value="Корзина">
+                    <input type="submit" value="Корзина" class="button_menu">
                     }</a></li>
 
                 <li><a>@helper.form(action = routes.BasketController.basketPage) {
                     <input type="hidden" name="numberSql" value="1">
-                    <input type="submit" value="Избранное">
+                    <input type="submit" value="Избранное"  class="button_menu">
                     }</a></li>
-
                 @if(isAdmin) {
+                    @*<li><a href="@routes.WineController.renderAddWine(login)">Добавить товар </a></li>*@
+                    <li><a href="#win3" class="button button-green">Добавить товар</a></li>
                     <li><a href="@routes.UsersController.usersList()">Список пользователей </a></li>
                 }
 
 
             </ul>
-            <table class="start">
-                <tr>
-                    <th>Дорогие Гости, добро пожаловать на сайт Винного Дома Barton & Guestier!</th>
-                </tr>
+            <p></p>
+            <p></p>
+            <p></p>
+            <table class="start" style="border:  5px solid #da0505;">
+                <td>
+                    <p style="color: white; font-family: 'Comic Sans MS'; font-size: 30px; text-align: center">Дорогие Гости, добро пожаловать на сайт Винного Дома Barton & Guestier!</p>
+                </td>
             </table>
-            <table cellpadding="5px" class="start">
+            <table  class="start" style="margin-top: 20px; margin-right: -50px;">
 
                 <tr>
-                    <th>      Умение разбираться в винах - это уже давно не роскошь,
+                    <th style="color: white; font-family: 'Comic Sans MS'; font-size: 20px">
+                        Умение разбираться в винах - это уже давно не роскошь,
                         а скорее необходимость, ведь, как говорил Гете –
                         «Жизнь слишком коротка, чтобы пить плохое вино».
                         Где можно приобрести, а главное научиться распознавать достойный напиток?
                         Есть такое место...
-                        Таня сделает красивое оформление текста, лесенка
-                        к примеру</th>
+                        </th>
 
                 </tr>
             </table>
+        </div>
 
 
     </body>
