--- a/app/views/updateUser.scala.html
+++ b/app/views/updateUser.scala.html
@@ -14,6 +14,7 @@
             cod = false;
         }
         <h1 class="g1">Обновить данные пользователя: @user.getLogin </h1>
+        <hr   color="white"  />
         @if(form.hasGlobalErrors){
             <h2>@form.globalError.message</h2>
         }
@@ -38,8 +39,14 @@
                         }
 
                     </td>
+
                 </tr>
+
             </table>
+
+             <hr color="white" width="800" style="margin-left: -300px">
+
+
 
             <input type ="submit" value="Обновить">
             }
